compiler/tools/fpp-check/test/invalid_symbols/constant_as_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/invalid_symbols/constant_as_type.fpp:2.15
array A = [3] a
              ^
error: symbol a is not defined
note: looking for a type here
